package edu.fiuba.algo3.modelo.comodin;
import edu.fiuba.algo3.modelo.mano.Mano;


public interface EstrategiaComodin {

    void realizarModificacion(int puntos, int multiplicador, Mano mano);
}
